; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_at86rf230.c_at86rf230_sync_state_change.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_at86rf230.c_at86rf230_sync_state_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.at86rf230_local = type { i32, i32 }

@at86rf230_sync_state_change_complete = common dso_local global i32 0, align 4
@ETIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.at86rf230_local*, i32)* @at86rf230_sync_state_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @at86rf230_sync_state_change(%struct.at86rf230_local* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.at86rf230_local*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.at86rf230_local* %0, %struct.at86rf230_local** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.at86rf230_local*, %struct.at86rf230_local** %4, align 8
  %8 = load %struct.at86rf230_local*, %struct.at86rf230_local** %4, align 8
  %9 = getelementptr inbounds %struct.at86rf230_local, %struct.at86rf230_local* %8, i32 0, i32 0
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @at86rf230_sync_state_change_complete, align 4
  %12 = call i32 @at86rf230_async_state_change(%struct.at86rf230_local* %7, i32* %9, i32 %10, i32 %11)
  %13 = load %struct.at86rf230_local*, %struct.at86rf230_local** %4, align 8
  %14 = getelementptr inbounds %struct.at86rf230_local, %struct.at86rf230_local* %13, i32 0, i32 1
  %15 = call i32 @msecs_to_jiffies(i32 100)
  %16 = call i64 @wait_for_completion_timeout(i32* %14, i32 %15)
  store i64 %16, i64* %6, align 8
  %17 = load i64, i64* %6, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %28, label %19

19:                                               ; preds = %2
  %20 = load %struct.at86rf230_local*, %struct.at86rf230_local** %4, align 8
  %21 = load %struct.at86rf230_local*, %struct.at86rf230_local** %4, align 8
  %22 = getelementptr inbounds %struct.at86rf230_local, %struct.at86rf230_local* %21, i32 0, i32 0
  %23 = load i32, i32* @ETIMEDOUT, align 4
  %24 = sub nsw i32 0, %23
  %25 = call i32 @at86rf230_async_error(%struct.at86rf230_local* %20, i32* %22, i32 %24)
  %26 = load i32, i32* @ETIMEDOUT, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %3, align 4
  br label %29

28:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %19
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @at86rf230_async_state_change(%struct.at86rf230_local*, i32*, i32, i32) #1

declare dso_local i64 @wait_for_completion_timeout(i32*, i32) #1

declare dso_local i32 @msecs_to_jiffies(i32) #1

declare dso_local i32 @at86rf230_async_error(%struct.at86rf230_local*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
